freeform-docs/v3/README.md
---
title: Freeform 3 for Craft CMS
description: Craft's most dependable and robust form builder.
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

::: version /craft/freeform/v5/
Freeform
:::

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">3.x</span>
            <span class="pr-v-type pr-retired">Retired</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<div class="hero">

<img src="../../../images/logos/freeform.png" class="hero-logo no-shadow" alt="Freeform 3 for Craft CMS">
<h2>Ready for wherever your project takes you.</h2>

Freeform is a versatile form-building tool that can adjust to the evolving needs of your project, whether it's a simple or complex form. It offers effective spam protection and an easy-to-use form builder with powerful field types and built-in convenience features that your users will love. Freeform integrates seamlessly with popular CRMs, email marketing services, Craft elements, and more. It includes fully customizable ready-to-go templates and also offers headless support.

<div class="hero-buttons">
    <a href="#feature-tour" class="button button-lg">
        <span class="arrow-down">Feature Tour</span>
    </a>
    <a href="#compare" class="button button-lg">
        <span class="arrow-down">Pricing</span>
    </a>
    <a href="./getting-started/" class="button button-lg">
        <span>Getting Started</span>
    </a>
    <small>
        <a href="https://plugins.craftcms.com/freeform">INSTALL A FREE, UNLIMITED TRIAL TODAY!</a>
    </small>
</div>

</div>


[[toc]]

<div class="feature-video">
    <iframe class="video-iframe" src="https://www.youtube.com/embed/94H5c9T4EHE?autoplay=1&mute=1" title="Form Builder - Overview" frameborder="0" allow="autoplay; accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
</div>

<div id="feature-tour" class="menu-grid top-feature-grid">
    <a href="./getting-started/" class="menu-box">
        <img src="../../../images/icons/tap.png" alt="Getting Started">
        <div class="menu-grid-text">
            <h3>Getting Started</h3>
            <p>Learn the basics about Freeform and setting up forms.</p>
        </div>
    </a>
    <a href="./guides/" class="menu-box">
        <img src="../../../images/icons/graduation-cap.png" alt="User Guides">
        <div class="menu-grid-text">
            <h3>User Guides</h3>
            <p>See solutions to common problems and questions.</p>
        </div>
    </a>
    <a href="./setup/common-issues/" class="menu-box">
        <img src="../../../images/icons/tools.png" alt="Common Issues">
        <div class="menu-grid-text">
            <h3>Common Issues</h3>
            <p>Troubleshoot and find answers to common problems.</p>
        </div>
    </a>
    <a href="./support/" class="menu-box">
        <img src="../../../images/icons/discussion.png" alt="Support">
        <div class="menu-grid-text">
            <h3>Support</h3>
            <p>Questions or issues? We want to help your project go smoothly!</p>
        </div>
    </a>
</div>

<div class="feature-heading">

<img src="../../../images/icons/shield.png" alt="Reliability">

## Reliability

<h3>Functional forms are crucial. Impressive features are useless if they don't work.</h3>

Losing customer leads can result in significant revenue loss and a negative impression on potential clients. We prioritize reliability above all else in Freeform to address this issue.

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/alert.png" alt="Email Failure Alerts">
        <div class="feature-grid-text">
            <h3>Email Failure Alerts</h3>
            <p>Freeform will email you if there is a template or setup issue with your site. <a href="./reliability/email-alerts/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/update-notification.png" alt="Automatic Update Notices">
        <div class="feature-grid-text">
            <h3>Automatic Update Notices</h3>
            <p>Freeform alerts you to potential website issues, catching errors before you notice. <a href="./reliability/update-notices/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-report.png" alt="Weekly / Daily Digest Email">
        <div class="feature-grid-text">
            <h3>Weekly / Daily Digest Email</h3>
            <p>Get email updates about what's happening on your site with weekly or daily digests. <a href="./reliability/digest/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/folder-attention.png" alt="Error Logging">
        <div class="feature-grid-text">
            <h3>Error Logging</h3>
            <p>The error logging system tells you quickly about any problems on your website.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/guarantee-certificate.png" alt="Satisfaction Guaranteed">
        <div class="feature-grid-text">
            <h3>Satisfaction Guaranteed</h3>
            <p>Try Freeform risk-free with our 90-day full refund guarantee.</p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/support.png" alt="Support">

## Here for you

<h3>Robust private support when you need it.</h3>

You can count on Solspace for excellent support! We also offer [Premium Support](../../../support/premium/), which includes priority access to email, chat, and web calls with our Software team for fast and efficient assistance.

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/support.png" alt="Private Support Tickets">
        <div class="feature-grid-text">
            <h3>Private Support Tickets</h3>
            <p>If you need help with Freeform, send us a private support ticket and we'll be happy to assist you.</p>
            <p><a href="./support/" class="button"><span>Support options</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/github.png" alt="GitHub Issues">
        <div class="feature-grid-text">
            <h3>GitHub Issues</h3>
            <p>Check our GitHub Issues page for current issues or to submit a new issue report.</p>
            <p><a href="https://github.com/solspace/craft-freeform/issues" class="button"><span>Report issue</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/discussion.png" alt="GitHub Discussion">
        <div class="feature-grid-text">
            <h3>GitHub Discussion</h3>
            <p>Do you have any questions or ideas to share? Check out our GitHub Discussions area!</p>
            <p>
                <a href="https://github.com/solspace/craft-freeform/discussions" class="button"><span>Ask for help</span></a>
                <a href="https://github.com/solspace/craft-freeform/discussions/categories/feature-requests" class="button"><span>Share idea</span></a>
            </p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/tap.png" alt="Form Builder">

## Form Builder

<h3>Everything is at your fingertips in our elegant and intuitive form builder.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/form-builder.png" alt="Intuitive form builder">
</div>

<div class="button-center">
    <a href="./overview/form-builder/" class="button button-lg"><span>Form Builder Overview</span></a></p>
</div>


<div class="feature-heading">

<img src="../../../images/icons/trolley.png" alt="Convenience">

## Convenience

<h3>So many plug-and-play features that make form building and templating a breeze!</h3>

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/dashboard.png" alt="Dashboard">
        <div class="feature-grid-text">
            <h3>Dashboard</h3>
            <p>The Freeform Dashboard provides a clear overview of your forms, submissions, and updates in one convenient location. <a href="./overview/dashboard/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/pages.png" alt="Multi-Page Forms">
        <div class="feature-grid-text">
            <h3>Multi-Page Forms</h3>
            <p>Do you have a lengthy form? With Freeform, you can divide your form into several pages. <a href="./overview/multi-page-forms/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/valid-check.png" alt="Complete Validation">
        <div class="feature-grid-text">
            <h3>Complete Validation</h3>
            <p>Freeform has validation features for fields, including making them required and ensuring specific data.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/js-format.png" alt="Built-in AJAX">
        <div class="feature-grid-text">
            <h3>Built-in AJAX</h3>
            <p>By simply checking a checkbox, Freeform will handle the AJAX processing for your form effortlessly.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/upload.png" alt="Drag & Drop File Upload">
        <div class="feature-grid-text">
            <h3>Drag & Drop File Upload</h3>
            <p>The premium JS-based file uploading field shows progress and thumbnails and remembers existing files when editing. <a href="./overview/fields/#file-upload-drag-drop">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/analytics.png" alt="Google Tag Manager">
        <div class="feature-grid-text">
            <h3>Google Tag Manager</h3>
            <p>Built-in flexible Google Tag Manager support with AJAX implementations.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Starter Templates">
        <div class="feature-grid-text">
            <h3>Starter Templates</h3>
            <p>Offers a variety of popular framework formatting templates that you can use as a starting point to develop your own project. <a href="./templating/formatting-template-examples/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/widgets.png" alt="Widgets">
        <div class="feature-grid-text">
            <h3>Widgets</h3>
            <p>Enhance your Craft Dashboard with stunning widgets like linear charts, radial charts, field value charts, and recent submissions widgets. <a href="./overview/widgets/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/carrot.png" alt="Spam Protection">

## Spam Protection

<h3>Fight spam effectively.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/spam-folder.png" alt="Built-in Spam Folder">
</div>
<div class="browser-mockup with-url">
    <img src="./images/feature/spam-detail.png" alt="Spam Details">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/carrot.png" alt="Freeform Honeypot">
        <div class="feature-grid-text">
            <h3>Freeform Honeypot</h3>
            <p>The Honeypot feature included in the system effectively deals with simple bot spam. <a href="./overview/spam-protection/#freeform-honeypot">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/spam.png" alt="Built-in Spam Folder">
        <div class="feature-grid-text">
            <h3>Built-in Spam Folder</h3>
            <p>Use the Spam Folder to catch any potential spam without risking missing legitimate submissions. <a href="./overview/spam-protection/#spam-folder">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/captcha.png" alt="reCAPTCHA & hCaptcha">
        <div class="feature-grid-text">
            <h3>reCAPTCHA & hCaptcha</h3>
            <p>To enhance your spam-fighting capabilities, you can choose to enable either <b>reCAPTCHA</b> or <b>hCaptcha</b>. <a href="./overview/spam-protection/#recaptcha">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/blocked.png" alt="Keyword Blocking">
        <div class="feature-grid-text">
            <h3>Keyword Blocking</h3>
            <p>With Freeform, you have the power to target and block specific email addresses, keywords, and IP addresses. <a href="./overview/spam-protection/#spam-blocking">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/throttling.png" alt="Throttling / Submit Time">
        <div class="feature-grid-text">
            <h3>Throttling / Submit Time</h3>
            <p>Limit form submissions by setting restrictions such as submission frequency, waiting period, or time limit for completion. <a href="./setup/settings/#form-submission-throttling">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/time-delete.png" alt="Automatic Purging">
        <div class="feature-grid-text">
            <h3>Automatic Purging</h3>
            <p>Freeform can automatically delete submissions marked as spam after a set number of days. <a href="./setup/settings/#automatically-purge-spam-submissions">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

<img src="../../../images/icons/field-text.png" alt="Fields">

## Powerful Fields

<h3>Freeform offers a diverse range of fieldtypes and advanced features that make complex tasks easier.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/conditional-rules.png" alt="Conditional Rules">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/logic.png" alt="Conditional Rules">
        <div class="feature-grid-text">
            <h3>Conditional Rules</h3>
            <p>Customize your form by setting pages to skip and fields to appear/disappear based on other field contents or selections. <a href="./overview/conditional-rules/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/check-list.png" alt="Populate Field Options">
        <div class="feature-grid-text">
            <h3>Populate Field Options</h3>
            <p>Use Craft Element data or predefined Freeform options such as countries or months to populate select, checkboxes, and radios. <a href="./overview/fields/#populating-fields-with-elements-predefined-options">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/review.png" alt="Include a Review Page">
        <div class="feature-grid-text">
            <h3>Include a Review Page</h3>
            <p>Use Twig code in an HTML block to create a custom review page for users to double-check form data from previous pages before submission.</p>
        </div>
    </div>
</div>

<div class="feature-grid feature-api-grid feature-fields-grid">
    <a href="./overview/fields/#text">
        <img src="../../../images/icons/field-text.png" alt="Text">
        <h3>Text</h3>
        <p>Regular text inputs</p>
    </a>
    <a href="./overview/fields/#textarea">
        <img src="../../../images/icons/textarea.png" alt="Textarea">
        <h3>Textarea</h3>
        <p>Multi-line text inputs</p>
    </a>
    <a href="./overview/fields/#email">
        <img src="../../../images/icons/email.png" alt="Email">
        <h3>Email</h3>
        <p>Email validation and notifications</p>
    </a>
    <a href="./overview/fields/#number">
        <img src="../../../images/icons/numbers.png" alt="Number">
        <h3>Number</h3>
        <p>Numeric validation and options</p>
    </a>
    <a href="./overview/fields/#hidden">
        <img src="../../../images/icons/hidden.png" alt="Hidden">
        <h3>Hidden</h3>
        <p>Hide field data</p>
    </a>
    <a href="./overview/fields/#select">
        <img src="../../../images/icons/select.png" alt="Select">
        <h3>Select</h3>
        <p>Dropdown field with powerful options to populate data</p>
    </a>
    <a href="./overview/fields/#multiple-select">
        <img src="../../../images/icons/list.png" alt="Multiple Select">
        <h3>Multiple Select</h3>
        <p>Multi-select field with powerful options to populate data</p>
    </a>
    <a href="./overview/fields/#checkbox">
        <img src="../../../images/icons/checkbox.png" alt="Checkbox">
        <h3>Checkbox</h3>
        <p>Single checkbox, e.g. 'Accept Terms'</p>
    </a>
    <a href="./overview/fields/#checkbox-group">
        <img src="../../../images/icons/check-list.png" alt="Checkbox Group">
        <h3>Checkbox Group</h3>
        <p>Multi-checkboxes field with powerful options to populate data</p>
    </a>
    <a href="./overview/fields/#radio-group">
        <img src="../../../images/icons/radio-list.png" alt="Radio Group">
        <h3>Radio Group</h3>
        <p>Radio options field with powerful options to populate data</p>
    </a>
    <a href="./overview/fields/#file-upload">
        <img src="../../../images/icons/attached.png" alt="File Upload">
        <h3>File Upload</h3>
        <p>Upload and validate one or multiple files to be attached to the submission</p>
    </a>
    <a href="./overview/fields/#file-upload-drag-drop">
        <img src="../../../images/icons/upload.png" alt="File Upload Drag & Drop">
        <h3>File Drag & Drop</h3>
        <p>Smart file uploader shows progress, thumbnails and memory when editing</p>
    </a>
    <a href="./overview/fields/#dynamic-recipients">
        <img src="../../../images/icons/email-list.png" alt="Dynamic Recipients">
        <h3>Dynamic Recipients</h3>
        <p>Submitter selects recipient that email should be sent to</p>
    </a>
    <a href="./overview/fields/#date-time">
        <img src="../../../images/icons/date-time.png" alt="Date & Time">
        <h3>Date & Time</h3>
        <p>Date and time picker with JS validation</p>
    </a>
    <a href="./overview/fields/#phone">
        <img src="../../../images/icons/phone.png" alt="Phone">
        <h3>Phone</h3>
        <p>Set a phone pattern with JS validation</p>
    </a>
    <a href="./overview/fields/#table">
        <img src="../../../images/icons/table.png" alt="Table">
        <h3>Table</h3>
        <p>Collect tabular or repeating data, allow users to add/remove rows</p>
    </a>
    <a href="./overview/fields/#rating">
        <img src="../../../images/icons/rating.png" alt="Rating">
        <h3>Rating</h3>
        <p>Plug and play rating stars</p>
    </a>
    <a href="./overview/fields/#opinion-scale">
        <img src="../../../images/icons/opinion-scale.png" alt="Opinion Scale">
        <h3>Opinion Scale</h3>
        <p>Users can select ranges for surveys</p>
    </a>
    <a href="./overview/fields/#signature">
        <img src="../../../images/icons/signature.png" alt="Signature">
        <h3>Signature</h3>
        <p>Users can digitally sign submissions</p>
    </a>
    <a href="./overview/fields/#invisible">
        <img src="../../../images/icons/invisible.png" alt="Invisible">
        <h3>Invisible</h3>
        <p>Include hidden data that is not visible in rendered source code</p>
    </a>
    <a href="./overview/fields/#regex">
        <img src="../../../images/icons/regex.png" alt="Regex">
        <h3>Regex</h3>
        <p>Come up with your own validation for data syntax</p>
    </a>
    <a href="./overview/fields/#website">
        <img src="../../../images/icons/globe.png" alt="Website">
        <h3>Website</h3>
        <p>Validate inputted data includes 'http://', etc</p>
    </a>
    <a href="./overview/fields/#html">
        <img src="../../../images/icons/code.png" alt="HTML">
        <h3>HTML Block</h3>
        <p>Include HTML/Twig inside form layouts</p>
    </a>
    <a href="./overview/fields/#rich-text">
        <img src="../../../images/icons/rich-text.png" alt="Rich Text">
        <h3>Rich Text Block</h3>
        <p>Include Rich Text inside form layouts</p>
    </a>
    <a href="./overview/fields/#confirm">
        <img src="../../../images/icons/confirm.png" alt="Confirm">
        <h3>Confirm</h3>
        <p>Target another field that should be retyped (e.g. email)</p>
    </a>
    <a href="./overview/fields/#password">
        <img src="../../../images/icons/lock.png" alt="Password">
        <h3>Password</h3>
        <p>Process a password value but do not store it (for user registation forms)</p>
    </a>
    <a href="./overview/fields/#credit-card">
        <img src="../../../images/icons/credit-card.png" alt="Credit Card">
        <h3>Credit Card</h3>
        <p>Allow users to securely enter credit card data for Payment-enabled forms</p>
    </a>
    <a href="./overview/fields/#email-marketing">
        <img src="../../../images/icons/megaphone.png" alt="Email Marketing">
        <h3>Email Marketing</h3>
        <p>Checkbox to allow users to subscribe to a mailing list.</p>
    </a>
</div>


<div class="feature-heading">

<img src="../../../images/icons/open-letter.png" alt="Email Notifications">

## Email Notifications

<h3>Every conceivable option for sending fully customizable email notifications.</h3>

Have as many templates as you like, and use different ones for every type.

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/email-notifications-list.png" alt="Email Notifications List">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/email-notifications-template.png" alt="Create an Email Notification">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/email-group.png" alt="Notify Admins">
        <div class="feature-grid-text">
            <h3>Notify Admins</h3>
            <p>Send email notifications for successful form submissions. <a href="./overview/email-notifications/#admin-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-user.png" alt="Notify Submitter">
        <div class="feature-grid-text">
            <h3>Notify Submitter</h3>
            <p>Upon success, send an email notification to the submitter of the form. <a href="./overview/email-notifications/#user-submitter-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-list.png" alt="Select Recipient">
        <div class="feature-grid-text">
            <h3>Select Recipient</h3>
            <p>Let users select the email recipient of the form submission from a list of predefined options. <a href="./overview/email-notifications/#dynamic-recipients">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/coding.png" alt="Template-level Recipients">
        <div class="feature-grid-text">
            <h3>Template-level Recipients</h3>
            <p>Set email address(es) at template-level to be notified, allowing you to pass a value from another element dynamically. <a href="./overview/email-notifications/#dynamic-template-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-plane.png" alt="Tell-a-Friend">
        <div class="feature-grid-text">
            <h3>Tell-a-Friend</h3>
            <p>Include additional Email fields inside your form to allow users to type out a friend's email address to receive a separate notification. <a href="./overview/email-notifications/#user-defined">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/emails.png" alt="Multiple Notifications">
        <div class="feature-grid-text">
            <h3>Multiple Notifications</h3>
            <p>There's no limit to the number of email notifications you can send, each with different templates/messages, etc. <a href="./overview/email-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/export.png" alt="Export Notifications">
        <div class="feature-grid-text">
            <h3>Export Notifications</h3>
            <p>You can set up customized export reports and receive them via email on a daily or weekly basis automatically. <a href="./overview/exporting/#export-email-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/open-letter.png" alt="Auto Plain Text">
        <div class="feature-grid-text">
            <h3>Auto Plain Text</h3>
            <p>Personalize the plain text version of email notifications or let Freeform convert it automatically.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-file.png" alt="Attach Files">
        <div class="feature-grid-text">
            <h3>Attach Files</h3>
            <p>Select asset file(s) to pre-attach to your email notification templates, allowing for the inclusion of 'welcome' documents, a PDF ticket, etc.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/resend-email.png" alt="Resend Email Notifications">
        <div class="feature-grid-text">
            <h3>Resend Email Notifications</h3>
            <p>Freeform allows you to resend an email notification (or set of them) for one or more submissions at a time.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/multiple-email-template.png" alt="Unlimited Templates">
        <div class="feature-grid-text">
            <h3>Unlimited Templates</h3>
            <p>Create as many notification templates as needed, with the option to use the same one for all forms or tailor them to each use-case.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/sketch.png" alt="Fully Customizable">
        <div class="feature-grid-text">
            <h3>Fully Customizable</h3>
            <p>You can customize your email notifications with your own design using HTML and Twig. <a href="./overview/email-notifications/#examples">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

<img src="../../../images/icons/code.png" alt="Flexible Templating">

## Flexible Templating

<h3>Fast and easy, yet highly customizable.</h3>

Creating templates for complex forms is simple and highly customizable. With our ready-to-use demo templates and features, you can be up and running in just a few minutes!

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/demo-basic-light.png" alt="Basic Light - Demo Template">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Starter Templates">
        <div class="feature-grid-text">
            <h3>Starter Templates</h3>
            <p>Includes a diverse selection of examples that can be used as a starting poinnt for building your own. <a href="./templating/formatting-template-examples/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Demo Templates">
        <div class="feature-grid-text">
            <h3>Demo Templates</h3>
            <p>By simply clicking a few buttons, the demo templates offer a complete and operational section for your website. <a href="./setup/demo-templates/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/code.png" alt="Flexible Templating">
        <div class="feature-grid-text">
            <h3>Flexible Templating</h3>
            <p>Creating templates is a breeze, even for complex forms! With our pre-made demo templates and features, you can have your forms up and running quickly.</p>
        </div>
    </div>
</div>

<div class="feature-heading">

<img src="../../../images/icons/cloud-api.png" alt="Integrations">

## Integrations

<h3>Integrate your forms with anything.</h3>

</div>

<div class="api-grid-wrapper-outer">
<div class="api-grid-wrapper-inner">

<div class="feature-grid feature-api-grid">
    <div>
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </div>
    <div>
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </div>
    <div>
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </div>
    <div>
        <img src="../../../images/api/zapier.png" alt="Zapier">
    </div>
    <div>
        <img src="../../../images/api/stripe.png" alt="Stripe">
    </div>
    <div>
        <img src="../../../images/api/constant-contact.png" alt="Constant Contact">
    </div>
    <div>
        <img src="../../../images/api/slack.png" alt="Slack">
    </div>
    <div>
        <img src="../../../images/api/active-campaign.png" alt="Active Campaign">
    </div>
    <div>
        <img src="../../../images/api/dotdigital.png" alt="Dotdigital">
    </div>
    <div>
        <img src="../../../images/api/campaign-monitor.png" alt="Campaign Monitor">
    </div>
    <div>
        <img src="../../../images/api/pardot.png" alt="Pardot">
    </div>
    <div>
        <img src="../../../images/api/freshdesk.png" alt="Freskdesk">
    </div>
    <div>
        <img src="../../../images/api/infusionsoft.png" alt="Infusionsoft">
    </div>
    <div>
        <img src="../../../images/api/insightly.png" alt="Insightly">
    </div>
    <div>
        <img src="../../../images/api/zoho.png" alt="Zoho">
    </div>
    <div>
        <img src="../../../images/api/campaign.png" alt="Campaign">
    </div>
    <div>
        <img src="../../../images/api/pipedrive.png" alt="Pipedrive">
    </div>
    <div>
        <img src="../../../images/api/sharpspring.png" alt="SharpSpring">
    </div>
    <div>
        <img src="../../../images/api/click-dimensions.png" alt="Click Dimensions">
    </div>
    <div>
        <img src="../../../images/api/recaptcha.png" alt="reCAPTCHA">
    </div>
    <div>
        <img src="../../../images/api/hcaptcha.png" alt="hCaptcha">
    </div>
    <div>
        <img src="../../../images/api/google-tag-manager.png" alt="Google Tag Manager">
    </div>
    <div>
        <img src="../../../images/api/tailwindcss.png" alt="Tailwind CSS">
    </div>
    <div>
        <img src="../../../images/api/bootstrap.png" alt="Bootstrap">
    </div>
    <div href="./integrations/elements/#craft-entries">
        <img src="../../../images/api/craft-entries.png" alt="Craft Entries">
    </div>
    <div href="./integrations/elements/#craft-users">
        <img src="../../../images/api/craft-users.png" alt="Craft Users">
    </div>
    <div href="./integrations/elements/#solspace-calendar-events">
        <img src="../../../images/api/solspace-calendar.png" alt="Calendar Events">
    </div>
    <div href="./integrations/elements/#editing-elements">
        <img src="../../../images/api/edit-elements.png" alt="Edit Elements">
    </div>
    <div>
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </div>
    <div>
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </div>
    <div>
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </div>
    <div>
        <img src="../../../images/api/zapier.png" alt="Zapier">
    </div>
    <div>
        <img src="../../../images/api/stripe.png" alt="Stripe">
    </div>
    <div>
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </div>
    <div>
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </div>
    <div>
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </div>
    <div>
        <img src="../../../images/api/constant-contact.png" alt="Constant Contact">
    </div>
    <div>
        <img src="../../../images/api/slack.png" alt="Slack">
    </div>
    <div>
        <img src="../../../images/api/active-campaign.png" alt="Active Campaign">
    </div>
    <div>
        <img src="../../../images/api/dotdigital.png" alt="Dotdigital">
    </div>
    <div>
        <img src="../../../images/api/campaign-monitor.png" alt="Campaign Monitor">
    </div>
    <div>
        <img src="../../../images/api/pardot.png" alt="Pardot">
    </div>
    <div>
        <img src="../../../images/api/freshdesk.png" alt="Freskdesk">
    </div>
    <div>
        <img src="../../../images/api/infusionsoft.png" alt="Infusionsoft">
    </div>
    <div>
        <img src="../../../images/api/insightly.png" alt="Insightly">
    </div>
    <div>
        <img src="../../../images/api/zoho.png" alt="Zoho">
    </div>
    <div>
        <img src="../../../images/api/campaign.png" alt="Campaign">
    </div>
    <div>
        <img src="../../../images/api/pipedrive.png" alt="Pipedrive">
    </div>
    <div>
        <img src="../../../images/api/sharpspring.png" alt="SharpSpring">
    </div>
    <div>
        <img src="../../../images/api/click-dimensions.png" alt="Click Dimensions">
    </div>
    <div>
        <img src="../../../images/api/recaptcha.png" alt="reCAPTCHA">
    </div>
    <div>
        <img src="../../../images/api/hcaptcha.png" alt="hCaptcha">
    </div>
    <div>
        <img src="../../../images/api/google-tag-manager.png" alt="Google Tag Manager">
    </div>
    <div>
        <img src="../../../images/api/tailwindcss.png" alt="Tailwind CSS">
    </div>
    <div>
        <img src="../../../images/api/bootstrap.png" alt="Bootstrap">
    </div>
    <div href="./integrations/elements/#craft-entries">
        <img src="../../../images/api/craft-entries.png" alt="Craft Entries">
    </div>
    <div href="./integrations/elements/#craft-users">
        <img src="../../../images/api/craft-users.png" alt="Craft Users">
    </div>
    <div href="./integrations/elements/#solspace-calendar-events">
        <img src="../../../images/api/solspace-calendar.png" alt="Calendar Events">
    </div>
    <div href="./integrations/elements/#editing-elements">
        <img src="../../../images/api/edit-elements.png" alt="Edit Elements">
    </div>
</div>

</div>
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/stripe-payments.png" alt="Accept Payments through Stripe">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/user-registration.png" alt="Map to Craft Elements - User Registration form">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/crm.png" alt="CRMs">
         <div class="feature-grid-text">
            <h3>CRMs</h3>
            <p>Easily integrate your forms with popular CRMs like Salesforce and HubSpot. <a href="./integrations/crm/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/mailing-list.png" alt="Email Marketing">
         <div class="feature-grid-text">
            <h3>Email Marketing</h3>
            <p>Connect your forms to Email Marketing services like Mailchimp and Constant Contact to streamline mailing list sign-ups. <a href="./integrations/email-marketing/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/webhook.png" alt="Webhooks">
         <div class="feature-grid-text">
            <h3>Webhooks</h3>
            <p>Connect submissions to Slack, create workflows with Zapier, or use the generic webhook for custom endpoints. <a href="./integrations/webhooks/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/content.png" alt="Craft Elements">
         <div class="feature-grid-text">
            <h3>Craft Elements</h3>
            <p>Create stunning forms that create or modify entries, users, Calendar events and complex user registration forms. <a href="./integrations/elements/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/credit-card.png" alt="Accept Payments">
         <div class="feature-grid-text">
            <h3>Accept Payments</h3>
            <p>You can start accepting payments and subscriptions for your forms through Stripe in just a few minutes. <a href="./integrations/payments/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/document-cloud.png" alt="POST Forwarding">
         <div class="feature-grid-text">
            <h3>POST Forwarding</h3>
            <p>Automatically submit form data to an external API URL after successful submission of the form. <a href="./integrations/post-forwarding/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/api-gear.png" alt="Custom">
         <div class="feature-grid-text">
            <h3>Custom</h3>
            <p>Create your own integration by developing a custom module that utilizes any of the numerous developer events available. <a href="./developer/events/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/archive.png" alt="Submission Data">

## Submission Data

<h3>Capture and do what you please with submission data.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-list.png" alt="Submissions">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-detail.png" alt="Edit Submissions">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-quick-export.png" alt="Quick Export">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/archive.png" alt="Store Submission Data">
        <div class="feature-grid-text">
            <h3>Store Submission Data</h3>
            <p>Save submission data or don't store it at all, but only send it through email notifications or an API integration, etc.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/gdpr.png" alt="GDPR Compliant">
        <div class="feature-grid-text">
            <h3>GDPR Compliant</h3>
            <p>Freeform simplifies GDPR compliance for your forms with thorough documentation and many configuration options. <a href="./setup/gdpr-compliance/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/data-manage.png" alt="Manage Submissions">
        <div class="feature-grid-text">
            <h3>Manage Submissions</h3>
            <p>View, manage, edit and delete submission data inside the control panel as well as front end templates! <a href="./overview/submissions/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/export.png" alt="Exporting">
        <div class="feature-grid-text">
            <h3>Exporting</h3>
            <p>Quickly export submission data or generate Export Profile reports in Excel, CSV, Text, XML, or JSON formats. <a href="./overview/exporting/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/comment-review.png" alt="Reviews & Comments">
        <div class="feature-grid-text">
            <h3>Reviews & Comments</h3>
            <p>Freeform can be customized to effectively manage discussion comments, product reviews, and more.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/survey.png" alt="Surveys">
        <div class="feature-grid-text">
            <h3>Surveys</h3>
            <p>Freeform offers a vast selection of field types to effortlessly create visually appealing survey forms. <a href="./form-types/surveys-polls/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/edit.png" alt="Front End Editing">
        <div class="feature-grid-text">
            <h3>Front End Editing</h3>
            <p>Enable front-end editing of form submissions for both admins and users to handle a wide variety of use-cases. <a href="./overview/submissions/#editing-submissions">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/play-button.png" alt="Save & Continue Later">
        <div class="feature-grid-text">
            <h3>Save & Continue Later</h3>
            <p>Users can save their form progress securely and come back later to complete it. <a href="./overview/save-continue-later/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/stop.png" alt="Limit Submissions">
        <div class="feature-grid-text">
            <h3>Limit Submissions</h3>
            <p>Limit submissions per user, allow only one submission, require login, or set a close date for the form submission period. <a href="./overview/submission-limits/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/relation.png" alt="Relate to other Elements">
        <div class="feature-grid-text">
            <h3>Relate to other Elements</h3>
            <p>Easily relate Freeform submissions with other element types, such as Craft Entries, allowing endless use cases. <a href="./overview/relations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/category.png" alt="Custom Statuses">
        <div class="feature-grid-text">
            <h3>Custom Statuses</h3>
            <p>Create unlimited statuses that can be applied to form submissions, allowing you to sort and filter submissions. <a href="./setup/settings/#statuses">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

## And more...

<h3>The possibilities are endless.</h3>

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/padlock.png" alt="User Group Permissions">
        <div class="feature-grid-text">
            <h3>User Group Permissions</h3>
            <p>Finely control user groups and permissions to restrict access to certain forms, sections, and submissions. <a href="./setup/permissions/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/referral.png" alt="Attach Forms to Elements">
        <div class="feature-grid-text">
            <h3>Attach Forms to Elements</h3>
            <p>Easily relate Freeform forms with other element types, such as Craft Entries, allowing endless use cases. <a href="./overview/relations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/config-page.png" alt="Loads of Settings">
        <div class="feature-grid-text">
            <h3>Loads of Settings</h3>
            <p>Access to an extensive range of settings to tailor the management, behavior, and overall user experience of your forms. <a href="./setup/settings/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/document-gear.png" alt="Project Config">
        <div class="feature-grid-text">
            <h3>Project Config</h3>
            <p>You can use Craft's Project Config to manage and adjust Freeform's settings. <a href="./setup/project-config/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/js-code.png" alt="PJavascript Plugin">
        <div class="feature-grid-text">
            <h3>Javascript Plugin</h3>
            <p>Freeform's Javascript plugin simplifies form customization for developers, regardless of website setup. <a href="./developer/js-plugin/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/graphql.png" alt="GraphQL">
        <div class="feature-grid-text">
            <h3>GraphQL</h3>
            <p>With Freeform, you can easily query forms using GraphQL. <a href="./developer/graphql/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/user-check.png" alt="Accessibility tested">
        <div class="feature-grid-text">
            <h3>Accessibility tested</h3>
            <p>We have tested our sample templates to ensure that they are accessible to everyone, using best-practice accessibility implementations.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/translation.png" alt="Translatable">
        <div class="feature-grid-text">
            <h3>Translatable</h3>
            <p>Ability to translate the Freeform control panel, form messages, and field options using static translation files. <a href="./setup/translating/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/developer.png" alt="Developer-friendly">
        <div class="feature-grid-text">
            <h3>Developer-friendly</h3>
            <p>Freeform is highly customizable and provides a wide range of developer events to easily extend it for your needs. <a href="./developer/events/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

## Compare

<h3>Which edition is right for your needs.</h3>

</div>

<div class="feature-table">

| <h3 class="no-margin">Pricing & Support</h3> | <h1 class="no-margin">Lite</h1> | <h1 class="orange no-margin">Pro</h1> |
| :--- | :---: | :---: |
| Price | **$99** | **<span class="orange">$149</span>** |
| Number of sites (including dev/staging) | 1 site | <span class="orange">1 site</span> |
| Support Options | Helpdesk, GitHub | <span class="orange">Helpdesk, GitHub</span> |
| Support Level<br /><small>_† Typical support ticket first response time within this timeframe or sooner, based on business days._</small> | 1-2 days† | <span class="orange">1-2 days†</span> |
| Support term | 1 year | <span class="orange">1 year</span> |
| Updates available | 1 year | <span class="orange">1 year</span> |
| Renewal (optional) | $49/yr | <span class="orange">$79/yr</span> |
| Compatibility | Craft&nbsp;3.4+ | <span class="orange">Craft&nbsp;3.4+</span> |
| Refund policy | 30 days | <span class="orange">30 days</span> |

| <h3 class="no-margin">Features</h3> |  |  |
| :--- | :---: | :---: |
| Intuitive drag and drop interface | ✓ | <span class="orange">✓</span> |
| Popular framework examples | ✓ | <span class="orange">✓</span> |
| Automated templating | ✓ | <span class="orange">✓</span> |
| Multi-page forms | ✓ | <span class="orange">✓</span> |
| Save & continue form later | | <span class="orange">✓</span> |
| Conditional Rules logic |  | <span class="orange">✓</span> |
| Built-in AJAX | ✓ | <span class="orange">✓</span> |
| Store, view and edit submissions | ✓ | <span class="orange">✓</span> |
| Edit submissions on front end |  | <span class="orange">✓</span> |
| GDPR compliant | ✓ | <span class="orange">✓</span> |
| Automatically purge submission data |  | <span class="orange">✓</span> |
| Variety of email notification options | ✓ | <span class="orange">✓</span> |
| Email Alert of failed email notifications | ✓ | <span class="orange">✓</span> |
| Weekly/Daily Digest emails | ✓ | <span class="orange">✓</span> |
| Exporting of data | CSV | <span class="orange">Excel, CSV, XML, JSON, Text</span> |
| Export profiles (pre-configured) |  | <span class="orange">✓</span> |
| Export email notifications |  | <span class="orange">✓</span> |
| Attach forms to entries |  | <span class="orange">✓</span> |
| Unlimited custom fields | ✓ | <span class="orange">✓</span> |
| Custom statuses | ✓ | <span class="orange">✓</span> |
| Basic field types (text, textarea, email, number, checkbox, checkbox group, radio buttons, file upload, hidden, select, dynamic recipients, HTML block) | ✓ | <span class="orange">✓</span> |
| Premium field types |  | <span class="orange">File Upload Drag & Drop, Date & Time, Phone, Table, Rating, Opinion Scale, Signature, Invisible, Regex, Website, Rich Text block, Confirm, Password</span> |
| Populate fields with Element data or Predefined options | ✓ | <span class="orange">✓</span> |
| Limit form to 1 submission per user |  | <span class="orange">✓</span> |
| Limit number of submissions per form |  | <span class="orange">✓</span> |
| Set a close date per form | ✓ | <span class="orange">✓</span> |
| Automatically store logged in user ID on submissions | ✓ | <span class="orange">✓</span> |
| Map submission data to Craft Elements |  | <span class="orange">✓</span> |
| Edit other Craft Elements |  | <span class="orange">✓</span> |
| Relate submissions to Craft Elements |  | <span class="orange">✓</span> |
| Built-in spam protection | ✓ | <span class="orange">✓</span> |
| Spam folder | ✓ | <span class="orange">✓</span> |
| Spam blocking | ✓ | <span class="orange">✓</span> |
| Captchas | reCAPTCHA v2&nbsp;Checkbox | <span class="orange">reCAPTCHA v2 Checkbox or Invisible, reCAPTCHA v3, hCaptcha Checkbox or Invisible</span> |
| Email Marketing integrations |  | <span class="orange">Mailchimp, Campaign Monitor, Constant Contact, ActiveCampaign, dotmailer, Craft Campaign plugin</span> |
| CRM API integrations |  | <span class="orange">Salesforce Lead, Salesforce Opportunities, Pardot, HubSpot, ActiveCampaign, Pipedrive Deals, Pipedrive Leads, Zoho Lead, Zoho Deal, Infusionsoft, Insightly, SharpSpring, Freshdesk</span> |
| Webhooks integrations |  | <span class="orange">Slack, Zapier, generic</span> |
| POST Forwarding |  | <span class="orange">✓</span> |
| GraphQL support | ✓ | <span class="orange">✓</span> |
| Accept Payments through Stripe |  | <span class="orange">✓</span> |
| Dashboard widgets |  | <span class="orange">✓</span> |
| Important Update Warnings & Notices | ✓ | <span class="orange">✓</span> |
| Translatable | ✓ | <span class="orange">✓</span> |
| Rename plugin | | <span class="orange">✓</span> |
| <small><a href="https://plugins.craftcms.com/freeform">INSTALL A FREE, UNLIMITED TRIAL TODAY!</a></small> | <a href="https://plugins.craftcms.com/freeform" class="button"><span>Buy</span></a><br />**$99** | <a href="https://plugins.craftcms.com/freeform" class="button"><span>Buy</span></a><br />**<span class="orange">$149</span>** |

</div>

<div class="content-block">

## Testimonials

> "Freeform Pro is really head and shoulders above any other form builder I've used."

> "Having reliable form processing is critical to making my clients' websites work. Using Freeform gives me the power to create flexible forms with less hassle than creating them manually."

> "It's a fantastic plugin for Craft which we use on nearly all of our project websites."

> "Freeform tends to add features before I realize I need them!"

> "I love Freeform! Been using it on sites for a long time and I like how full-featured it is."

> "Love this product... one of the best things built for Craft in my opinion."

> "Awesome plugin! Saved a ton of time for me. Worth the money spent."

> "Freeform has allowed me to do things that were once impossible for a project I was working on. It's easy to use and incredibly powerful!"

_*(Testimonials collected from an anonymous Freeform product feedback survey and through private support tickets)_

</div>
<div class="content-block">

## Why Freeform?
Rest assured that Freeform and the team behind it are committed to providing you with the level of quality and support that you expect and deserve.

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/support.png" alt="Top Notch Support">
        <div class="feature-grid-text">
            <h3>Top Notch Support</h3>
            <p>Our commitment to providing top-notch customer support is well-known in the Craft CMS community. We always aim to deliver the best and most dependable assistance to our valued customers.</p>
            <p><a href="./support/" class="button button-blue"><span>See support options</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/hourglass.png" alt="20+ Years Experience">
        <div class="feature-grid-text">
            <h3>20+ Years Experience</h3>
            <p>For over 20 years, Solspace has been creating, maintaining, and providing support for software to more than 20,000 customers. In total, over 400,000 plugins have been sold or downloaded for free.</p>
            <p><a href="https://solspace.com" class="button button-blue"><span>About Solspace</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/development.png" alt="Active Development">
        <div class="feature-grid-text">
            <h3>Active Development</h3>
            <p>Craft CMS users widely prefer Freeform, a plugin that boasts an impressive track record of continuous development, including numerous feature upgrades, enhancements, and bug fixes.</p>
            <p><a href="./setup/changelog" class="button"><span>View the changelog</span></a></p>
        </div>
    </div>
</div>

</div>
<div class="content-block">

## FAQ
Frequently asked questions about buying Freeform.

<h3>How many sites can I use my license on?</h3>

Each purchase of Freeform allows usage for 1 website, with the exception of development and staging versions of that site.

<h3>If I buy Lite now, can I switch to Pro later?</h3>

Yes! Just visit Freeform inside the Craft Plugin Store inside your control panel and click on the **Try** or **Buy Now** buttons, and Craft will switch the edition license for the difference in price.

<h3>Do you offer discounts to non-profits?</h3>

Yes, we offer a discount to non-profits for 20% off the regular price upon proof of non-profit status. Please contact us for more information about this.

<h3>Can I try before I buy?</h3>

In the Craft Plugin Store you can install a trial of Freeform to try it out!

<h3>Does the Trial version limit features?</h3>

The trial versions of Solspace software are not limited in any way. However, if you attempt to use a trial version on a production site, Craft will display a red banner at the top of your control panel alerting you to purchase a license.

</div>