freeform-docs/v5/README.md
---
title: Freeform 5 for Craft CMS
description: Craft's most dependable and robust form builder.
prev: false
next: false
---

<meta property="og:image" content="https://docs.solspace.com/extras/social/craft/freeform/freeform.png" />

<div id="pr-heading">
    <img src="https://docs.solspace.com/extras/icons/products/freeform-icon.png" alt="Freeform" class="pr-image">
    <span class="pr-name">Freeform</span>
    <span class="pr-category">for Craft</span>
    <div class="pr-v-wrapper">
        <div class="pr-v">
            <span class="pr-v-v">5.x</span>
            <span class="pr-v-type pr-latest">✓ Latest</span>
            <span class="pr-v-arrow arrow down"></span>
        </div>
        <ul class="pr-v-list">
            <li><a href="/craft/freeform/v5/">5.x<span class="pr-v-type pr-latest">✓ Latest</span></a></li>
            <li><a href="/craft/freeform/v4/">4.x</a></li>
            <li><a href="/craft/freeform/v3/">3.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v2/">2.x<span class="pr-v-type pr-retired">Retired</span></a></li>
            <li><a href="/craft/freeform/v1/">1.x<span class="pr-v-type pr-retired">Retired</span></a></li>
        </ul>
    </div>
    <div class="pr-buy">
        <a href="https://plugins.craftcms.com/freeform" class="button button-blue"><span class="external-url">Plugin Store</span></a>
    </div>
</div>

<div class="hero">

<img src="../../../images/logos/freeform5.png" class="hero-logo hero-logo-larger no-shadow no-rounding" alt="Freeform 5 for Craft CMS">
<h2>Ready for wherever your project takes you.</h2>

Freeform is a versatile form-building tool that can adjust to the evolving needs of your project, whether it's a simple or complex form. It offers effective spam protection and an easy-to-use form builder with powerful field types and built-in convenience features that your users will love. Freeform integrates seamlessly with popular CRMs, email marketing services, Craft elements, and more. It includes fully customizable ready-to-go templates and also offers headless support.

<div class="hero-buttons">
    <a href="#feature-tour" class="button button-lg">
        <span class="arrow-down">Feature Tour</span>
    </a>
    <a href="#compare" class="button button-lg">
        <span class="arrow-down">Pricing</span>
    </a>
    <a href="./getting-started/" class="button button-lg">
        <span>Getting Started</span>
    </a>
    <small>
        <a href="https://plugins.craftcms.com/freeform">INSTALL A FREE, UNLIMITED TRIAL TODAY!</a>
    </small>
</div>

</div>


[[toc]]


<video autoplay loop muted>
    <source src="./videos/builder-feature.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<div id="feature-tour" class="menu-grid top-feature-grid">
    <a href="./getting-started/" class="menu-box">
        <img src="../../../images/icons/tap.png" alt="Getting Started">
        <div class="menu-grid-text">
            <h3>Getting Started</h3>
            <p>Learn the basics about Freeform and setting up forms.</p>
        </div>
    </a>
    <a href="./guides/" class="menu-box">
        <img src="../../../images/icons/graduation-cap.png" alt="User Guides">
        <div class="menu-grid-text">
            <h3>User Guides</h3>
            <p>See solutions to common problems and questions.</p>
        </div>
    </a>
    <a href="/support/" class="menu-box">
        <img src="../../../images/icons/discussion.png" alt="Support">
        <div class="menu-grid-text">
            <h3>Support</h3>
            <p>Questions or issues? We want to help your project go smoothly!</p>
        </div>
    </a>
</div>

<div class="feature-heading">

<img src="../../../images/icons/shield.png" alt="Reliability">

## Reliability

<h3>Functional forms are crucial. Impressive features are useless if they don't work.</h3>

Losing customer leads can result in significant revenue loss and a negative impression on potential clients. We prioritize reliability above all else in Freeform to address this issue.

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/alert.png" alt="Email Failure Alerts">
        <div class="feature-grid-text">
            <h3>Email Failure Alerts</h3>
            <p>Freeform will email you if there is a template or setup issue with your site. <a href="./configuration/notices-alerts/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/update-notification.png" alt="Automatic Update Notices">
        <div class="feature-grid-text">
            <h3>Automatic Update Notices</h3>
            <p>Freeform alerts you to potential website issues, catching errors before you notice. <a href="./configuration/notices-alerts/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-report.png" alt="Weekly / Daily Digest Email">
        <div class="feature-grid-text">
            <h3>Weekly / Daily Digest Email</h3>
            <p>Get email updates about what's happening on your site with weekly or daily digests. <a href="./configuration/notices-alerts/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/folder-attention.png" alt="Error Logging">
        <div class="feature-grid-text">
            <h3>Error Logging</h3>
            <p>The error logging system tells you quickly about any problems on your website.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/guarantee-certificate.png" alt="Satisfaction Guaranteed">
        <div class="feature-grid-text">
            <h3>Satisfaction Guaranteed</h3>
            <p>Try Freeform risk-free with our 90-day full refund guarantee.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/support.png" alt="Private Support Tickets">
        <div class="feature-grid-text">
            <h3>Private Support Tickets</h3>
            <p>If you need help with Freeform, send us a <a href="/support/">private support ticket</a> and we'll be happy to assist you.</p>
        </div>
    </div>
</div>

<div class="button-center">
    <a href="./configuration/notices-alerts/" class="button button-lg"><span>Reliability options</span></a>
    <a href="/support/" class="button button-lg"><span>Support options</span></a>
</div>


<div class="feature-heading">

<img src="../../../images/icons/magic-wand.png" alt="Form Builder">

## Form Builder

<h3>Everything is at your fingertips in our elegant and intuitive form builder.</h3>

The Freeform form builder is an all-in-one interface that lets you take control of almost every aspect of your forms.

</div>

<video autoplay loop muted class="neg20-margin-top">
    <source src="./videos/builder-sections.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<div class="button-center">
    <a href="./forms/builder/" class="button button-lg"><span>Form Builder Overview</span></a></p>
</div>


<div class="feature-heading">

<img src="../../../images/icons/trolley.png" alt="Convenience">

## Convenience

<h3>So many plug-and-play features that make form building and templating a breeze!</h3>

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/dashboard.png" alt="Forms Dashboard">
        <div class="feature-grid-text">
            <h3>Forms Dashboard</h3>
            <p>The Forms Dashboard provides a clear overview of your forms, submissions, and updates in one convenient location. <a href="./forms/builder/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/pages.png" alt="Multi-Page Forms">
        <div class="feature-grid-text">
            <h3>Multi-Page Forms</h3>
            <p>Do you have a lengthy form? With Freeform, you can divide your form into several pages. <a href="./forms/builder/#multi-page-forms">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/valid-check.png" alt="Complete Validation">
        <div class="feature-grid-text">
            <h3>Complete Validation</h3>
            <p>Freeform has validation features for fields, including making them required and ensuring specific data.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/js-format.png" alt="Built-in AJAX">
        <div class="feature-grid-text">
            <h3>Built-in AJAX</h3>
            <p>By simply checking a checkbox, Freeform will handle the AJAX processing for your form effortlessly.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/upload.png" alt="Drag & Drop File Upload">
        <div class="feature-grid-text">
            <h3>Drag & Drop File Upload</h3>
            <p>The premium JS-based file uploading field shows progress and thumbnails and remembers existing files when editing. <a href="./forms/fields/#file-upload-drag-drop">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/padlock.png" alt="Limited Users">
        <div class="feature-grid-text">
            <h3>Limited Users <Badge type="feature" text="New!" /></h3>
            <p>Customize the form builder experience for specific users or groups.
            <a href="./configuration/limited-users/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/analytics.png" alt="Google Tag Manager">
        <div class="feature-grid-text">
            <h3>Google Tag Manager</h3>
            <p>Built-in flexible Google Tag Manager support with AJAX implementations.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Sample Templates">
        <div class="feature-grid-text">
            <h3>Sample Templates</h3>
            <p>Offers a variety of popular framework formatting templates that you can use as a starting point to develop your own project. <a href="./templates/formatting/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/widgets.png" alt="Widgets">
        <div class="feature-grid-text">
            <h3>Widgets</h3>
            <p>Enhance your Craft Dashboard with stunning widgets like linear charts, radial charts, and recent submissions widgets. <a href="./forms/widgets/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/carrot.png" alt="Spam Protection">

## Spam Protection

<h3>Fight spam effectively.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/spam-folder.png" alt="Built-in Spam Folder">
</div>
<div class="browser-mockup with-url">
    <img src="./images/feature/spam-detail.png" alt="Spam Details">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/carrot.png" alt="Freeform Honeypot">
        <div class="feature-grid-text">
            <h3>Freeform Honeypot</h3>
            <p>The Honeypot feature included in the system effectively deals with simple bot spam. <a href="./forms/spam-protection/#freeform-honeypot">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/spam.png" alt="Built-in Spam Folder">
        <div class="feature-grid-text">
            <h3>Built-in Spam Folder</h3>
            <p>Use the Spam Folder to catch any potential spam without risking missing legitimate submissions. <a href="./forms/spam-protection/#spam-folder">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/captcha.png" alt="reCAPTCHA & hCaptcha">
        <div class="feature-grid-text">
            <h3>reCAPTCHA & hCaptcha</h3>
            <p>To enhance your spam-fighting capabilities, you can choose to enable either <b>reCAPTCHA</b> or <b>hCaptcha</b>. <a href="./forms/spam-protection/#recaptcha">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/blocked.png" alt="Keyword Blocking">
        <div class="feature-grid-text">
            <h3>Keyword Blocking</h3>
            <p>With Freeform, you have the power to target and block specific email addresses, keywords, and IP addresses. <a href="./forms/spam-protection/#spam-blocking">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/throttling.png" alt="Throttling / Submit Time">
        <div class="feature-grid-text">
            <h3>Throttling / Submit Time</h3>
            <p>Limit form submissions by setting restrictions such as submission frequency, waiting period, or time limit for completion. <a href="./configuration/settings/#form-submission-throttling">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/time-delete.png" alt="Automatic Purging">
        <div class="feature-grid-text">
            <h3>Automatic Purging</h3>
            <p>Freeform can automatically delete submissions marked as spam after a set number of days. <a href="./configuration/settings/#automatically-purge-spam-submissions">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

<img src="../../../images/icons/field-text.png" alt="Fields">

## Powerful Fields

<h3>Freeform offers a diverse range of fieldtypes and advanced features to populate and control them.</h3>

</div>

<video autoplay loop muted class="neg20-margin-top">
    <source src="./videos/builder-rules.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/logic.png" alt="Conditional Rules">
        <div class="feature-grid-text">
            <h3>Conditional Rules</h3>
            <p>Customize your form by setting pages to skip and fields to appear/disappear based on other field contents or selections. <a href="./forms/conditional-rules/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/check-list.png" alt="Populate Field Options">
        <div class="feature-grid-text">
            <h3>Populate Field Options</h3>
            <p>Use Craft Element data or predefined Freeform options such as countries or months to populate dropdowns, checkboxes, and radios. <a href="./forms/fields/#populating-fields-with-elements-predefined-options">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/recycle.png" alt="Reuse Fields">
        <div class="feature-grid-text">
            <h3>Reuse Fields <Badge type="feature" text="New!" /></h3>
            <p>Save common fields as favorites, or quickly search across all forms to reuse an existing field.
            <a href="./forms/builder/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/lock.png" alt="Field Encryption">
        <div class="feature-grid-text">
            <h3>Field Encryption <Badge type="feature" text="New!" /></h3>
            <p>Each field includes the ability to optionally encrypt its submission data. Simply toggle the setting and Freeform will take care of the rest.
            <a href="./forms/fields/#field-encryption">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/gear-coding.png" alt="Custom Field Types">
        <div class="feature-grid-text">
            <h3>Custom Field Types <Badge type="feature" text="New!" /></h3>
            <p>Easily create your own custom field types!
            <a href="./developer/field-types/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/review.png" alt="Include a Review Page">
        <div class="feature-grid-text">
            <h3>Include a Review Page</h3>
            <p>Use Twig code in an HTML block to create a custom review page for users to double-check form data from previous pages before submission.</p>
        </div>
    </div>
</div>

<div class="button-center">
    <a href="./forms/fields/" class="button button-lg"><span>Fields Overview</span></a></p>
</div>

<div class="feature-grid feature-api-grid feature-fields-grid">
    <a href="./forms/fields/#text">
        <img src="../../../images/icons/field-text.png" alt="Text">
        <h3>Text</h3>
        <p>Regular text inputs</p>
    </a>
    <a href="./forms/fields/#textarea">
        <img src="../../../images/icons/textarea.png" alt="Textarea">
        <h3>Textarea</h3>
        <p>Multi-line text inputs</p>
    </a>
    <a href="./forms/fields/#email">
        <img src="../../../images/icons/email.png" alt="Email">
        <h3>Email</h3>
        <p>Email validation and notifications</p>
    </a>
    <a href="./forms/fields/#number">
        <img src="../../../images/icons/numbers.png" alt="Number">
        <h3>Number</h3>
        <p>Numeric validation and options</p>
    </a>
    <a href="./forms/fields/#hidden">
        <img src="../../../images/icons/hidden.png" alt="Hidden">
        <h3>Hidden</h3>
        <p>Hide field data</p>
    </a>
    <a href="./forms/fields/#dropdown">
        <img src="../../../images/icons/select.png" alt="Dropdown">
        <h3>Dropdown</h3>
        <p>Dropdown field with powerful options to populate data</p>
    </a>
    <a href="./forms/fields/#multiple-select">
        <img src="../../../images/icons/list.png" alt="Multiple Select">
        <h3>Multiple Select</h3>
        <p>Multi-select field with powerful options to populate data</p>
    </a>
    <a href="./forms/fields/#checkbox">
        <img src="../../../images/icons/checkbox.png" alt="Checkbox">
        <h3>Checkbox</h3>
        <p>Single checkbox, e.g. 'Accept Terms'</p>
    </a>
    <a href="./forms/fields/#checkboxes">
        <img src="../../../images/icons/check-list.png" alt="Checkboxes">
        <h3>Checkboxes</h3>
        <p>Multi-checkboxes field with powerful options to populate data</p>
    </a>
    <a href="./forms/fields/#radios">
        <img src="../../../images/icons/radio-list.png" alt="Radios">
        <h3>Radios</h3>
        <p>Radio options field with powerful options to populate data</p>
    </a>
    <a href="./forms/fields/#file-upload">
        <img src="../../../images/icons/attached.png" alt="File Upload">
        <h3>File Upload</h3>
        <p>Upload and validate one or multiple files to be attached to the submission</p>
    </a>
    <a href="./forms/fields/#file-upload-drag-drop">
        <img src="../../../images/icons/upload.png" alt="File Upload Drag & Drop">
        <h3>File Drag & Drop</h3>
        <p>Smart file uploader shows progress, thumbnails and memory when editing</p>
    </a>
    <a href="./forms/fields/#date-time">
        <img src="../../../images/icons/date-time.png" alt="Date & Time">
        <h3>Date & Time</h3>
        <p>Date and time picker with JS validation</p>
    </a>
    <a href="./forms/fields/#phone">
        <img src="../../../images/icons/phone.png" alt="Phone">
        <h3>Phone</h3>
        <p>Set a phone pattern with JS validation</p>
    </a>
    <a href="./forms/fields/#table">
        <img src="../../../images/icons/table.png" alt="Table">
        <h3>Table</h3>
        <p>Collect tabular or repeating data, allow users to add/remove rows</p>
    </a>
    <a href="./forms/fields/#group">
        <img src="../../../images/icons/table.png" alt="Group">
        <h3>Group <Badge type="feature" text="New!" /></h3>
        <p>Contains other fields within it</p>
    </a>
    <a href="./forms/fields/#rating">
        <img src="../../../images/icons/rating.png" alt="Rating">
        <h3>Rating</h3>
        <p>Plug and play rating stars</p>
    </a>
    <a href="./forms/fields/#opinion-scale">
        <img src="../../../images/icons/opinion-scale.png" alt="Opinion Scale">
        <h3>Opinion Scale</h3>
        <p>Users can select ranges for surveys</p>
    </a>
    <a href="./forms/fields/#calculation">
        <img src="../../../images/icons/calculation.png" alt="Calculation">
        <h3>Calculation <Badge type="feature" text="New!" /></h3>
        <p>Perform dynamic calculations based on user-input values within forms</p>
    </a>
    <a href="./forms/fields/#signature">
        <img src="../../../images/icons/signature.png" alt="Signature">
        <h3>Signature</h3>
        <p>Users can digitally sign submissions</p>
    </a>
    <a href="./forms/fields/#invisible">
        <img src="../../../images/icons/invisible.png" alt="Invisible">
        <h3>Invisible</h3>
        <p>Include hidden data that is not visible in rendered source code</p>
    </a>
    <a href="./forms/fields/#regex">
        <img src="../../../images/icons/regex.png" alt="Regex">
        <h3>Regex</h3>
        <p>Come up with your own validation for data syntax</p>
    </a>
    <a href="./forms/fields/#website">
        <img src="../../../images/icons/globe.png" alt="Website">
        <h3>Website</h3>
        <p>Validate inputted data includes 'http://', etc</p>
    </a>
    <a href="./forms/fields/#html">
        <img src="../../../images/icons/code.png" alt="HTML">
        <h3>HTML Block</h3>
        <p>Include HTML/Twig inside form layouts</p>
    </a>
    <a href="./forms/fields/#rich-text">
        <img src="../../../images/icons/rich-text.png" alt="Rich Text">
        <h3>Rich Text Block</h3>
        <p>Include Rich Text inside form layouts</p>
    </a>
    <a href="./forms/fields/#confirm">
        <img src="../../../images/icons/confirm.png" alt="Confirm">
        <h3>Confirm</h3>
        <p>Target another field that should be retyped (e.g. email)</p>
    </a>
    <a href="./forms/fields/#password">
        <img src="../../../images/icons/lock.png" alt="Password">
        <h3>Password</h3>
        <p>Process a password value but do not store it (for user registation forms)</p>
    </a>
    <a href="./forms/fields/#stripe-payments">
        <img src="../../../images/icons/credit-card.png" alt="Stripe Payments">
        <h3>Stripe Payments</h3>
        <p>Allow users to securely enter payment data for Payment-enabled forms</p>
    </a>
</div>


<div class="feature-heading">

<img src="../../../images/icons/open-letter.png" alt="Email Notifications">

## Email Notifications

<h3>Every conceivable option for sending fully customizable email notifications.</h3>

Have as many templates as you like, and use different ones for every type.

</div>

<video autoplay loop muted class="neg20-margin-top">
    <source src="./videos/builder-notifications.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<video autoplay loop muted>
    <source src="./videos/email-notifications.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/email-group.png" alt="Notify Admins">
        <div class="feature-grid-text">
            <h3>Notify Admins</h3>
            <p>Send email notifications for successful form submissions. <a href="./forms/email-notifications/#admin-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-user.png" alt="Notify Submitter">
        <div class="feature-grid-text">
            <h3>Notify Submitter</h3>
            <p>Upon success, send an email notification to the submitter of the form. <a href="./forms/email-notifications/#email-fields">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-list.png" alt="User Select's Recipient">
        <div class="feature-grid-text">
            <h3>User Select's Recipient</h3>
            <p>Let users select the email recipient of the form submission from a list of predefined options. <a href="./forms/email-notifications/#user-select">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/logic.png" alt="Conditional Notifications">
        <div class="feature-grid-text">
            <h3>Conditional Notifications <Badge type="feature" text="New!" /></h3>
            <p>Conditionally send notifications based on the contents and/or option selection of any field(s). <a href="./forms/email-notifications/#conditional">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/coding.png" alt="Template-level Recipients">
        <div class="feature-grid-text">
            <h3>Template-level Recipients</h3>
            <p>Set email address(es) at template-level to be notified, allowing you to pass a value from another element dynamically. <a href="./forms/email-notifications/#dynamic-template-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-plane.png" alt="Tell-a-Friend">
        <div class="feature-grid-text">
            <h3>Tell-a-Friend</h3>
            <p>Include additional Email fields inside your form to allow users to type out a friend's email address to receive a separate notification. <a href="./forms/email-notifications/#user-defined">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/emails.png" alt="Multiple Notifications">
        <div class="feature-grid-text">
            <h3>Multiple Notifications</h3>
            <p>There's no limit to the number of email notifications you can send, each with different templates/messages, etc. <a href="./forms/email-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/export.png" alt="Export Notifications">
        <div class="feature-grid-text">
            <h3>Export Notifications</h3>
            <p>You can set up customized export reports and receive them via email on a daily or weekly basis automatically. <a href="./forms/exporting/#export-email-notifications">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/open-letter.png" alt="Auto Plain Text">
        <div class="feature-grid-text">
            <h3>Auto Plain Text</h3>
            <p>Personalize the plain text version of email notifications or let Freeform convert it automatically.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/email-file.png" alt="Attach Files">
        <div class="feature-grid-text">
            <h3>Attach Files</h3>
            <p>Select asset file(s) to pre-attach to your email notification templates, allowing for the inclusion of 'welcome' documents, a PDF ticket, etc.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/resend-email.png" alt="Resend Email Notifications">
        <div class="feature-grid-text">
            <h3>Resend Email Notifications</h3>
            <p>Freeform allows you to resend an email notification (or set of them) for one or more submissions at a time.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/multiple-email-template.png" alt="Unlimited Templates">
        <div class="feature-grid-text">
            <h3>Unlimited Templates</h3>
            <p>Create as many notification templates as needed, with the option to use the same one for all forms or tailor them to each use case.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/sketch.png" alt="Fully Customizable">
        <div class="feature-grid-text">
            <h3>Fully Customizable</h3>
            <p>You can customize your email notifications with your own design using HTML and Twig. <a href="./forms/email-notifications/#examples">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="button-center">
    <a href="./forms/email-notifications/" class="button button-lg"><span>Email Notifications Overview</span></a></p>
</div>

<div class="feature-heading">

<img src="../../../images/icons/code.png" alt="Flexible Templating">

## Flexible Templating

<h3>Fast and easy, yet highly customizable.</h3>

Templates are highly customizable for even the most complex forms. With our ready-to-use demo templates and features, you can be up and running in just a few minutes!

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/demo-basic-light.png" alt="Basic Light - Demo Template">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Sample Templates">
        <div class="feature-grid-text">
            <h3>Sample Templates</h3>
            <p>Includes a diverse selection of examples that can be used as a starting poinnt for building your own. <a href="./templates/formatting/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/starter-templates.png" alt="Demo Templates">
        <div class="feature-grid-text">
            <h3>Demo Templates</h3>
            <p>By simply clicking a few buttons, the demo templates offer a complete and operational section for your website. <a href="./configuration/demo-templates/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/settings.png" alt="Template Overrides">
        <div class="feature-grid-text">
            <h3>Template Overrides</h3>
            <p>Configure template overrides on attributes and field values, labels and more. <a href="./templates/formatting/#template-overrides">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

<img src="../../../images/icons/cloud-api.png" alt="Integrations">

## Integrations

<h3>Integrate your forms with anything.</h3>

</div>

<div class="api-grid-wrapper-outer">
<div class="api-grid-wrapper-inner">

<div class="feature-grid feature-api-grid">
    <a href="./integrations/mailchimp/">
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </a>
    <a href="./integrations/hubspot/">
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </a>
    <a href="./integrations/salesforce/">
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </a>
    <a href="./integrations/zapier/">
        <img src="../../../images/api/zapier.png" alt="Zapier">
    </a>
    <a href="./integrations/payments/">
        <img src="../../../images/api/stripe.png" alt="Stripe">
    </a>
    <a href="./integrations/constant-contact/">
        <img src="../../../images/api/constant-contact.png" alt="Constant Contact">
    </a>
    <a href="./integrations/slack/">
        <img src="../../../images/api/slack.png" alt="Slack">
    </a>
    <a href="./integrations/active-campaign/">
        <img src="../../../images/api/active-campaign.png" alt="Active Campaign">
    </a>
    <a href="./integrations/dotdigital/">
        <img src="../../../images/api/dotdigital.png" alt="Dotdigital">
    </a>
    <a href="./integrations/campaign-monitor/">
        <img src="../../../images/api/campaign-monitor.png" alt="Campaign Monitor">
    </a>
    <a href="./integrations/pardot/">
        <img src="../../../images/api/pardot.png" alt="Pardot">
    </a>
    <a href="./integrations/freshdesk/">
        <img src="../../../images/api/freshdesk.png" alt="Freskdesk">
    </a>
    <a href="./integrations/infusionsoft/">
        <img src="../../../images/api/infusionsoft.png" alt="Infusionsoft">
    </a>
    <a href="./integrations/insightly/">
        <img src="../../../images/api/insightly.png" alt="Insightly">
    </a>
    <a href="./integrations/google-sheets/">
        <img src="../../../images/api/google-sheets.png" alt="Google Sheets">
    </a>
    <a href="./integrations/zoho/">
        <img src="../../../images/api/zoho.png" alt="Zoho">
    </a>
    <a href="./integrations/campaign/">
        <img src="../../../images/api/campaign.png" alt="Campaign">
    </a>
    <a href="./integrations/pipedrive/">
        <img src="../../../images/api/pipedrive.png" alt="Pipedrive">
    </a>
    <a href="./integrations/sharpspring/">
        <img src="../../../images/api/sharpspring.png" alt="SharpSpring">
    </a>
    <a href="./integrations/clickdimensions/">
        <img src="../../../images/api/click-dimensions.png" alt="ClickDimensions">
    </a>
    <a href="./integrations/recaptcha/">
        <img src="../../../images/api/recaptcha.png" alt="reCAPTCHA">
    </a>
    <a href="./integrations/hcaptcha/">
        <img src="../../../images/api/hcaptcha.png" alt="hCaptcha">
    </a>
    <a href="./integrations/generic-webhook/">
        <img src="../../../images/api/generic-webhook.png" alt="Generic Webhooks">
    </a>
    <a href="./integrations/google-tag-manager/">
        <img src="../../../images/api/google-tag-manager.png" alt="Google Tag Manager">
    </a>
    <a href="./templates/formatting/#sample-templates">
        <img src="../../../images/api/tailwindcss.png" alt="Tailwind CSS">
    </a>
    <a href="./templates/formatting/#sample-templates">
        <img src="../../../images/api/bootstrap.png" alt="Bootstrap">
    </a>
    <a href="./integrations/elements/#craft-entries">
        <img src="../../../images/api/craft-entries.png" alt="Craft Entries">
    </a>
    <a href="./integrations/elements/#craft-users">
        <img src="../../../images/api/craft-users.png" alt="Craft Users">
    </a>
    <a href="./integrations/elements/#solspace-calendar-events">
        <img src="../../../images/api/solspace-calendar.png" alt="Calendar Events">
    </a>
    <a href="./integrations/elements/#editing-elements">
        <img src="../../../images/api/edit-elements.png" alt="Edit Elements">
    </a>
    <a href="./integrations/mailchimp/">
        <img src="../../../images/api/mailchimp.png" alt="Mailchimp">
    </a>
    <a href="./integrations/hubspot/">
        <img src="../../../images/api/hubspot.png" alt="HubSpot">
    </a>
    <a href="./integrations/salesforce/">
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </a>
    <a href="./integrations/zapier/">
        <img src="../../../images/api/zapier.png" alt="Zapier">
    </a>
    <a href="./integrations/payments/">
        <img src="../../../images/api/stripe.png" alt="Stripe">
    </a>
    <a href="./integrations/constant-contact/">
        <img src="../../../images/api/constant-contact.png" alt="Constant Contact">
    </a>
    <a href="./integrations/slack/">
        <img src="../../../images/api/slack.png" alt="Slack">
    </a>
    <a href="./integrations/active-campaign/">
        <img src="../../../images/api/active-campaign.png" alt="Active Campaign">
    </a>
    <a href="./integrations/dotdigital/">
        <img src="../../../images/api/dotdigital.png" alt="Dotdigital">
    </a>
    <a href="./integrations/campaign-monitor/">
        <img src="../../../images/api/campaign-monitor.png" alt="Campaign Monitor">
    </a>
    <a href="./integrations/pardot/">
        <img src="../../../images/api/pardot.png" alt="Pardot">
    </a>
    <a href="./integrations/freshdesk/">
        <img src="../../../images/api/freshdesk.png" alt="Freskdesk">
    </a>
    <a href="./integrations/infusionsoft/">
        <img src="../../../images/api/infusionsoft.png" alt="Infusionsoft">
    </a>
    <a href="./integrations/google-sheets/">
        <img src="../../../images/api/google-sheets.png" alt="Google Sheets">
    </a>
    <a href="./integrations/insightly/">
        <img src="../../../images/api/insightly.png" alt="Insightly">
    </a>
    <a href="./integrations/campaign/">
        <img src="../../../images/api/campaign.png" alt="Campaign">
    </a>
    <a href="./integrations/pipedrive/">
        <img src="../../../images/api/pipedrive.png" alt="Pipedrive">
    </a>
    <a href="./integrations/sharpspring/">
        <img src="../../../images/api/sharpspring.png" alt="SharpSpring">
    </a>
    <a href="./integrations/clickdimensions/">
        <img src="../../../images/api/click-dimensions.png" alt="ClickDimensions">
    </a>
    <a href="./integrations/recaptcha/">
        <img src="../../../images/api/recaptcha.png" alt="reCAPTCHA">
    </a>
    <a href="./integrations/hcaptcha/">
        <img src="../../../images/api/hcaptcha.png" alt="hCaptcha">
    </a>
    <a href="./integrations/generic-webhook/">
        <img src="../../../images/api/generic-webhook.png" alt="Generic Webhooks">
    </a>
    <a href="./integrations/google-tag-manager/">
        <img src="../../../images/api/google-tag-manager.png" alt="Google Tag Manager">
    </a>
    <a href="./templates/formatting/#sample-templates">
        <img src="../../../images/api/tailwindcss.png" alt="Tailwind CSS">
    </a>
    <a href="./templates/formatting/#sample-templates">
        <img src="../../../images/api/bootstrap.png" alt="Bootstrap">
    </a>
    <a href="./integrations/elements/#craft-entries">
        <img src="../../../images/api/craft-entries.png" alt="Craft Entries">
    </a>
    <a href="./integrations/elements/#craft-users">
        <img src="../../../images/api/craft-users.png" alt="Craft Users">
    </a>
    <a href="./integrations/elements/#solspace-calendar-events">
        <img src="../../../images/api/solspace-calendar.png" alt="Calendar Events">
    </a>
    <a href="./integrations/elements/#editing-elements">
        <img src="../../../images/api/edit-elements.png" alt="Edit Elements">
    </a>
    <a href="./integrations/salesforce/">
        <img src="../../../images/api/salesforce.png" alt="Salesforce">
    </a>
</div>

</div>
</div>

<video autoplay loop muted>
    <source src="./videos/builder-integrations.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<video autoplay loop muted>
    <source src="./videos/builder-user-register.mp4" type="video/mp4">
    This browser does not display the video tag.
</video>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/crm.png" alt="CRMs">
         <div class="feature-grid-text">
            <h3>CRMs</h3>
            <p>Easily integrate your forms with popular CRMs like Salesforce and HubSpot. <a href="./integrations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/megaphone.png" alt="Email Marketing">
         <div class="feature-grid-text">
            <h3>Email Marketing</h3>
            <p>Connect your forms to Email Marketing services like Mailchimp and Constant Contact to streamline mailing list sign-ups. <a href="./integrations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/webhook.png" alt="Webhooks">
         <div class="feature-grid-text">
            <h3>Webhooks</h3>
            <p>Connect submissions to Slack, create workflows with Zapier, or use the generic webhook for custom endpoints. <a href="./integrations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/content.png" alt="Craft Elements">
         <div class="feature-grid-text">
            <h3>Craft Elements</h3>
            <p>Create stunning forms that create or modify entries, users, Calendar events and complex user registration forms. <a href="./integrations/elements/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/credit-card.png" alt="Accept Payments">
         <div class="feature-grid-text">
            <h3>Accept Payments</h3>
            <p>You can start accepting payments and subscriptions for your forms through Stripe in just a few minutes. <a href="./integrations/payments/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/document-cloud.png" alt="POST Forwarding">
         <div class="feature-grid-text">
            <h3>POST Forwarding</h3>
            <p>Automatically submit form data to an external API URL after successful submission of the form. <a href="./integrations/post-forwarding/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/api-gear.png" alt="Custom">
         <div class="feature-grid-text">
            <h3>Custom</h3>
            <p>Create your own integration by developing a custom module that utilizes any of the numerous developer events available. <a href="./developer/events/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/archive.png" alt="Submission Data">

## Submission Data

<h3>Capture and do what you please with submission data.</h3>

</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-list.png" alt="Submissions">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-detail.png" alt="Edit Submissions">
</div>

<div class="browser-mockup with-url">
    <img src="./images/feature/submissions-quick-export.png" alt="Quick Export">
</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/archive.png" alt="Store Submission Data">
        <div class="feature-grid-text">
            <h3>Store Submission Data</h3>
            <p>Save submission data or don't store it at all, but only send it through email notifications or an API integration, etc.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/gdpr.png" alt="GDPR Compliant">
        <div class="feature-grid-text">
            <h3>GDPR Compliant</h3>
            <p>Freeform simplifies GDPR compliance for your forms with thorough documentation and many configuration options. <a href="./configuration/gdpr-compliance/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/data-manage.png" alt="Manage Submissions">
        <div class="feature-grid-text">
            <h3>Manage Submissions</h3>
            <p>View, manage, edit and delete submission data inside the control panel as well as front end templates! <a href="./submissions/overview/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/export.png" alt="Exporting">
        <div class="feature-grid-text">
            <h3>Exporting</h3>
            <p>Quickly export submission data or generate Export Profile reports in Excel, CSV, Text, XML, or JSON formats. <a href="./forms/exporting/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/comment-review.png" alt="Reviews & Comments">
        <div class="feature-grid-text">
            <h3>Reviews & Comments</h3>
            <p>Freeform can be customized to effectively manage discussion comments, product reviews, and more.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/survey.png" alt="Surveys">
        <div class="feature-grid-text">
            <h3>Surveys</h3>
            <p>Freeform offers a vast selection of field types to effortlessly create visually appealing survey forms. <a href="./forms/types/surveys-polls/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/edit.png" alt="Front End Editing">
        <div class="feature-grid-text">
            <h3>Front End Editing</h3>
            <p>Enable front-end editing of form submissions for both admins and users to handle a wide variety of use cases. <a href="./submissions/overview/#editing-submissions">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/play-button.png" alt="Save & Continue Later">
        <div class="feature-grid-text">
            <h3>Save & Continue Later</h3>
            <p>Users can save their form progress securely and come back later to complete it. <a href="./forms/save-continue-later/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/stop.png" alt="Limit Submissions">
        <div class="feature-grid-text">
            <h3>Limit Submissions</h3>
            <p>Limit submissions per user, allow only one submission, require login, or set a close date for the form submission period. <a href="./submissions/overview/#submission-limits">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/relation.png" alt="Relate to other Elements">
        <div class="feature-grid-text">
            <h3>Relate to other Elements</h3>
            <p>Easily relate Freeform submissions with other element types, such as Craft Entries, allowing endless use cases. <a href="./forms/relations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/category.png" alt="Custom Statuses">
        <div class="feature-grid-text">
            <h3>Custom Statuses</h3>
            <p>Create unlimited statuses that can be applied to form submissions, allowing you to sort and filter submissions. <a href="./configuration/settings/#statuses">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

<img src="../../../images/icons/headless.png" alt="Headless">

## Headless

<h3>Full support for your headless implementation.</h3>

Freeform supports headless website architecture making it easy to use JavaScript-based front-end frameworks such as Vue.js, Next.js, React JS and more! Freeform also supports querying form layouts and using mutations to create submissions via GraphQL.

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/api/vue-js.png" alt="Vue.js">
        <div class="feature-grid-text">
            <h3>Vue.js</h3>
            <p>Full support for implementation Freeform with Vue.js.</p>
            <p><a href="./headless/vuejs/" class="menu-box">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/api/react.png" alt="React JS">
        <div class="feature-grid-text">
            <h3>React JS</h3>
            <p>Full support for implementation Freeform with React JS.</p>
            <p><a href="./headless/reactjs/" class="menu-box">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/api/next-js.png" alt="Next.js">
        <div class="feature-grid-text">
            <h3>Next.js</h3>
            <p>Full support for implementation Freeform with Next.js.</p>
            <p><a href="./headless/nextjs/" class="menu-box">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/graphql.png" alt="GraphQL">
        <div class="feature-grid-text">
            <h3>GraphQL</h3>
            <p>With Freeform, you can easily query form layouts and submit form mutations using GraphQL.</p>
            <p><a href="./headless/graphql/" class="menu-box">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>


<div class="feature-heading">

## And more...

<h3>The possibilities are endless.</h3>

</div>

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/padlock.png" alt="User Group Permissions">
        <div class="feature-grid-text">
            <h3>User Group Permissions</h3>
            <p>Finely control user groups and permissions to restrict access to certain forms, sections, and submissions. <a href="./configuration/permissions/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/referral.png" alt="Attach Forms to Elements">
        <div class="feature-grid-text">
            <h3>Attach Forms to Elements</h3>
            <p>Easily relate Freeform forms with other element types, such as Craft Entries, allowing endless use cases. <a href="./forms/relations/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/config-page.png" alt="Loads of Settings">
        <div class="feature-grid-text">
            <h3>Loads of Settings</h3>
            <p>Access to an extensive range of settings to tailor the management, behavior, and overall user experience of your forms. <a href="./configuration/settings/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/world.png" alt="Site Filtering for Forms and Submissions">
        <div class="feature-grid-text">
            <h3>Site Filtering</h3>
            <p>Optionally enable Site filtering for forms and submissions to show/hide them for specific Sites. <a href="./configuration/sites/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/js-code.png" alt="PJavascript Plugin">
        <div class="feature-grid-text">
            <h3>Javascript Plugin</h3>
            <p>Freeform's Javascript plugin simplifies form customization for developers, regardless of website setup. <a href="./developer/js-plugin/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/graphql.png" alt="GraphQL">
        <div class="feature-grid-text">
            <h3>GraphQL</h3>
            <p>With Freeform, you can easily query form layouts and submit form mutations using GraphQL. <a href="./headless/graphql/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/user-check.png" alt="Accessibility tested">
        <div class="feature-grid-text">
            <h3>Accessibility tested</h3>
            <p>We have tested our sample templates to ensure that they are accessible to everyone, using best-practice accessibility implementations.</p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/translation.png" alt="Translatable">
        <div class="feature-grid-text">
            <h3>Translatable</h3>
            <p>Ability to translate the Freeform control panel, form messages, and field options using static translation files. <a href="./configuration/translating/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/developer.png" alt="Developer-friendly">
        <div class="feature-grid-text">
            <h3>Developer-friendly</h3>
            <p>Freeform is highly customizable and provides a wide range of developer events to easily extend it for your needs. <a href="./developer/events/">Learn&nbsp;more&nbsp;→</a></p>
        </div>
    </div>
</div>

<div class="feature-heading">

## Compare

<h3>Which edition is right for your needs.</h3>

</div>


<div class="feature-table">

| <h3 class="no-margin"></h3> | <h2 class="edition-express no-margin">Express</h2><Badge type="feature" text="New!" /> | <h2 class="edition-lite no-margin">Lite</h2> | <h2 class="edition-pro no-margin">Pro</h2> |
| :--- | :---: | :---: | :---: |
| Price | **<span class="edition-express">FREE!</span>** | **<span class="edition-lite">$99</span>** | **<span class="edition-pro">$149</span>** |
| Number of Sites Allowed per License<br /><small>_Dev/staging environments don't count toward total._</small> | <span class="edition-express">1 site</span> | <span class="edition-lite">1 site</span> | <span class="edition-pro">1 site</span> |
| Support Options | <span class="edition-express">Helpdesk, GitHub</span> | <span class="edition-lite">Helpdesk, GitHub</span> | <span class="edition-pro">Helpdesk, GitHub</span> |
| Support Level<br /><small>_† Typical support ticket first response time within this timeframe or sooner, based on business days._</small> | <span class="edition-express">2-4 days†</span> | <span class="edition-lite">1-2 days†</span> | <span class="edition-pro">1-2 days†</span> |
| Support Term | <span class="compare-none">N/A</span> | <span class="edition-lite">1 year</span> | <span class="edition-pro">1 year</span> |
| Updates Available | <span class="edition-express">Unlimited</span> | <span class="edition-lite">1 year</span> | <span class="edition-pro">1 year</span> |
| Renewal (optional) | <span class="compare-none">N/A</span> | <span class="edition-lite">$49/yr</span> | <span class="edition-pro">$79/yr</span> |
| Compatibility<br /><small>_The same 5.x version works on both Craft 5.x and 4.x._</small> | <span class="edition-express">Craft&nbsp;5+, Craft&nbsp;4+</span> | <span class="edition-lite">Craft&nbsp;5+, Craft&nbsp;4+</span> | <span class="edition-pro">Craft&nbsp;5+, Craft&nbsp;4+</span> |
| Works on [Craft Cloud](https://craftcms.com/cloud) | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Refund Policy | <span class="compare-none">N/A</span> | <span class="edition-lite">30 days</span> | <span class="edition-pro">30 days</span> |
| Popular Framework Examples | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Automated Templating | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Intuitive Drag & Drop Form Builder | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Customize the display of Field types | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Multi-page Forms | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Save & Continue Form Later | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Conditional Rules Logic | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Built-in AJAX | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Store, View and Edit Submissions | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Field Encryption | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Edit Submissions on Front End | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| GDPR Compliant | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Site Filtering for Forms and Submissions | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Automatically Purge Submission Data | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Automatically Purge Spam Submission Data | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Email Notifications | <span class="edition-express">Admin, Email Field, User-Defined, Template-based</span> | <span class="edition-lite">Admin, User Select, Email Field, User-Defined, Template-based</span> | <span class="edition-pro">Admin, Conditional, User Select, Email Field, User-Defined, Template-based</span> |
| Email Alert of Failed Email Notifications | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Weekly/Daily Digest Emails | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Exporting of Data | <span class="edition-express">Basic CSV</span> | <span class="edition-lite">Basic CSV</span> | <span class="edition-pro">Excel, CSV, XML, JSON, Text</span> |
| Export Profiles (pre-configured) | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Export Email Notifications | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Attach Forms to Entries | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Attach Submissions to Entries | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Number of Forms | <span class="edition-express">1</span> | <span class="edition-lite">Unlimited</span> | <span class="edition-pro">Unlimited</span> |
| Number of Fields | <span class="edition-express">Up to 20</span> | <span class="edition-lite">Unlimited</span> | <span class="edition-pro">Unlimited</span> |
| Custom Statuses | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Basic Field Types | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Premium Field Types | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Build Custom Field Types | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Populate Fields with Element Data or Predefined Options | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Surveys & Polls Reporting | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Limited Users (form builder permissions) | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Set Defaults and/or Lock Form Builder Settings | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Limit Form to 1 Submission per User | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Limit Number of Submissions per Form | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Set a Close Date per Form | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Automatically Store Logged In User ID on Submissions | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Map Submission Data to Craft Elements | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Edit Other Craft Elements | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Relate Submissions to Craft Elements | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Honeypot Test (Spam) | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Javascript Test (Spam) | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Spam Folder | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Spam Blocking | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Captchas | <span class="edition-express">reCAPTCHA v2&nbsp;Checkbox</span> | <span class="edition-lite">reCAPTCHA v2 Checkbox or Invisible, reCAPTCHA v3, hCaptcha Checkbox or Invisible</span> | <span class="edition-pro">reCAPTCHA v2 Checkbox or Invisible, reCAPTCHA v3, hCaptcha Checkbox or Invisible</span> |
| Email Marketing Integrations | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">Mailchimp, Campaign Monitor, Constant Contact, ActiveCampaign, Dotdigital, Campaign plugin</span> |
| CRM Integrations | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">Salesforce, Pardot, HubSpot, ActiveCampaign, Pipedrive, Zoho CRM, Infusionsoft, Insightly, SharpSpring, Freshdesk</span> |
| Webhooks Integrations | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">Slack, Zapier, generic</span> |
| Other Integrations | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">Google Sheets</span> |
| POST Forwarding | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| GraphQL Support | <span class="compare-none">✕</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Stripe Payments | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Dashboard Widgets | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| Important Update Warnings & Notices | ✓ | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Translatable | <span class="edition-express">✓</span> | <span class="edition-lite">✓</span> | <span class="edition-pro">✓</span> |
| Rename Plugin | <span class="compare-none">✕</span> | <span class="compare-none">✕</span> | <span class="edition-pro">✓</span> |
| <small><a href="https://plugins.craftcms.com/freeform">INSTALL A FREE, UNLIMITED TRIAL TODAY!</a></small> | <a href="https://plugins.craftcms.com/freeform" class="button"><span>Get it!</span></a><br /><b class="edition-express">FREE!</b> <Badge type="feature" text="New!" /> | <a href="https://plugins.craftcms.com/freeform" class="button"><span>Get it!</span></a><br /><b class="edition-lite">$99</b> | <a href="https://plugins.craftcms.com/freeform" class="button"><span>Get it!</span></a><br /><b class="edition-pro">$149</b> |

</div>


## Testimonials

> "Freeform Pro is really head and shoulders above any other form builder I've used."

> "Having reliable form processing is critical to making my clients' websites work. Using Freeform gives me the power to create flexible forms with less hassle than creating them manually."

> "It's a fantastic plugin for Craft which we use on nearly all of our project websites."

> "Freeform tends to add features before I realize I need them!"

> "I love Freeform! Been using it on sites for a long time and I like how full-featured it is."

> "Love this product... one of the best things built for Craft in my opinion."

> "Awesome plugin! Saved a ton of time for me. Worth the money spent."

> "Freeform has allowed me to do things that were once impossible for a project I was working on. It's easy to use and incredibly powerful!"

_*(Testimonials collected from an anonymous Freeform product feedback survey and through private support tickets)_


## Why Freeform?
Rest assured that Freeform and the team behind it are committed to providing you with the level of quality and support that you expect and deserve.

<div class="feature-grid">
    <div>
        <img src="../../../images/icons/support.png" alt="Top Notch Support">
        <div class="feature-grid-text">
            <h3>Top Notch Support</h3>
            <p>Our commitment to providing top-notch customer support is well-known in the Craft CMS community. We always aim to deliver the best and most dependable assistance to our valued customers.</p>
            <p><a href="/support/" class="button button-blue"><span>See support options</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/hourglass.png" alt="20+ Years Experience">
        <div class="feature-grid-text">
            <h3>20+ Years Experience</h3>
            <p>For over 20 years, Solspace has been creating, maintaining, and providing support for software to more than 20,000 customers. In total, over 400,000 plugins have been sold or downloaded for free.</p>
            <p><a href="https://solspace.com" class="button button-blue"><span>About Solspace</span></a></p>
        </div>
    </div>
    <div>
        <img src="../../../images/icons/development.png" alt="Active Development">
        <div class="feature-grid-text">
            <h3>Active Development</h3>
            <p>Craft CMS users widely prefer Freeform, a plugin that boasts an impressive track record of continuous development, including numerous feature upgrades, enhancements, and bug fixes.</p>
            <p><a href="./setup/changelog/" class="button button-blue"><span>View the changelog</span></a></p>
        </div>
    </div>
</div>


## FAQ
Frequently asked questions about buying Freeform.

<h3>How many sites can I use my license on?</h3>

Each purchase of Freeform allows usage for 1 website, with the exception of development and staging versions of that site.

<h3>If I buy Lite now, can I switch to Pro later?</h3>

Yes! Just visit Freeform inside the Craft Plugin Store inside your control panel and click on the **Try** or **Buy Now** buttons, and Craft will switch the edition license for the difference in price.

<h3>Do you offer discounts to non-profits?</h3>

Yes, we offer a discount to non-profits for 20% off the regular price upon proof of non-profit status. Please contact us for more information about this.

<h3>Can I try before I buy?</h3>

In the Craft Plugin Store you can install a trial of Freeform to try it out!

<h3>Does the Trial version limit features?</h3>

The trial versions of Solspace software are not limited in any way. However, if you attempt to use a trial version on a production site, Craft will display a red banner at the top of your control panel alerting you to purchase a license.
